# replicant

./: .gitignore  CLAUDE.md  README.md  corpus.csv  corpus_1000.csv  corpus_1000.json  corpus_a.csv  corpus_b.csv  corpus_methodology.json  pyproject.toml  tmp_benchmark_subset.csv
benchmark_merged/: 2201.02693.json  2201.05282.json  2202.04233.json  2202.08312.json  2202.08413.json  2203.00131.json  2203.05328.json  2203.06468.json  2203.07807.json  2203.09476.json  2203.15285.json  2203.16392.json  2203.16871.json  2204.09224.json  2204.10848.json  2204.13679.json  2204.13886.json  2205.00534.json  2205.06688.json  2205.07838.json  2205.10093.json  2205.10504.json  2206.03362.json  2206.06644.json  2206.08420.json  2206.08768.json  2206.08901.json  2207.01684.json  2207.04881.json  2207.09036.json  2207.13757.json  2208.03318.json  2208.08085.json  2209.04097.json  2209.10637.json  2209.10926.json  2209.11134.json  2209.12782.json  2209.15632.json  2210.01846.json  (+151 more)
docs/: how-it-works.md  supported-environments.md  troubleshooting.md
replicant/: __init__.py  benchmark.py  cli.py
results/: 2201.02693.json  2201.05282.json  2201.09693.json  2202.04233.json  2202.06777.json  2202.07147.json  2202.08312.json  2202.08441.json  2202.10769.json  2202.13197.json  2203.00131.json  2203.00376.json  2203.01820.json  2203.06468.json  2203.08570.json  2203.13009.json  2203.15209.json  2203.15285.json  2204.01475.json  2204.02004.json  2204.04494.json  2204.04601.json  2204.04813.json  2204.09224.json  2204.10312.json  2204.10810.json  2204.13355.json  2204.13679.json  2204.13853.json  2204.13886.json  2205.02289.json  2205.03749.json  2205.04843.json  2205.05907.json  2205.06514.json  2205.06688.json  2205.07496.json  2205.09723.json  2205.10093.json  2205.10343.json  (+428 more)
results_a/: 2201.13338.json  2201.13409.json  2202.08413.json  2203.04554.json  2203.07807.json  2203.09694.json  2203.10912.json  2203.11593.json  2203.16392.json  2204.01960.json  2204.07730.json  2204.10848.json  2204.12062.json  2205.00400.json  2205.00534.json  2205.06265.json  2205.07838.json  2205.11434.json  2205.12120.json  2205.15469.json  2206.00832.json  2206.05891.json  2206.06644.json  2206.07615.json  2206.08420.json  2206.08901.json  2207.01203.json  2207.09239.json  2207.12258.json  2207.13415.json  2207.14431.json  2208.02355.json  2208.02645.json  2208.03318.json  2208.10238.json  2209.00179.json  2209.00244.json  2209.00462.json  2209.04593.json  2209.08430.json  (+219 more)
(+836 files in other folders)
