[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "replicant"
version = "0.1.0"
description = "Turn research papers into working local environments"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Oorjit Chowdhary", email = "oorjitc@uw.edu"},
]
keywords = [
    "reproducibility", "research", "docker", "arxiv",
    "machine-learning", "bedrock", "llm", "ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "click>=8.1",
    "pypdf>=3.0",
    "arxiv>=2.0",
    "GitPython>=3.1",
    "docker>=7.0",
    "rich>=13.0",
    "boto3>=1.34",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/oorjitchowdhary/replicant"
Repository = "https://github.com/oorjitchowdhary/replicant"
"Bug Tracker" = "https://github.com/oorjitchowdhary/replicant/issues"

[project.scripts]
replicant = "replicant.cli:main"

[tool.setuptools.packages.find]
include = ["replicant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
